--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
       <head>
-            <title>JavaScript Basics</title>
+            <title>JavaScript Conditions</title>
             <meta charset = "UTF-8">
             <meta name = "author" content = "Hanna Faye M. Suyo">
-            <meta name = "keywords" content = "Lab Exercise 1">
-            <meta name = "date-submitted" content = "01/23/25">
+            <meta name = "keywords" content = "Lab Exercise 3">
+            <meta name = "date-submitted" content = "03/03/25">
 
             <script src = "script.js"></script>
         
